completed new version of ENA download functionality and added to Jupyter notebook

--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -4432,38 +4432,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7d5845a5-2cec-48a4-b986-407de14b73bc",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Source', 'Process', 'TimePoint', 'Country_GRMK', 'Species',\n",
-       "       'fully_concordant_gt', 'core_mutation_dhfr_51', 'core_mutation_dhfr_59',\n",
-       "       'core_mutation_dhfr_108', 'core_mutation_dhfr_164',\n",
-       "       ...\n",
-       "       'ENA_acc_GenRe_GRC2', 'ENA_acc_GenRe_SPEC',\n",
-       "       'GenRe_GRC1_ENA_FASTQ_FTP_1', 'GenRe_GRC2_ENA_FASTQ_FTP_1',\n",
-       "       'GenRe_SPEC_ENA_FASTQ_FTP_1', 'Pf8_ENA_FASTQ_FTP_1',\n",
-       "       'GenRe_GRC1_ENA_FASTQ_FTP_2', 'GenRe_GRC2_ENA_FASTQ_FTP_2',\n",
-       "       'GenRe_SPEC_ENA_FASTQ_FTP_2', 'Pf8_ENA_FASTQ_FTP_2'],\n",
-       "      dtype='object', length=134)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genre_pf8_merged_seq_gt_concord_small_ena2_df.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "id": "e046eeea-3aeb-4a69-9a5b-2bd992f0c535",
    "metadata": {
@@ -5865,101 +5833,78 @@
    "metadata": {},
    "source": [
     "## Retrieve FASTQ files\n",
-    "This part makes use of a Python helper module that is provided in this repo.  \n",
-    "Each sample row in the data files created above should refer to 4 samples runs (4 unique \"run accession\" IDs on ENA): \n",
-    "- 1x Pf8 whole-genome sequenncing\n",
-    "- 3x GenRe AmpSeq panels (GRC1, GRC2, SPEC)\n",
+    "A Python script \"ENA_data_helper.py\" is provided alongside this notebook and can be used to download the FASTQ files from ENA.  \n",
+    "The full download is time intenstive and uses a large amount of disk space and is done performed in this notbook.  \n",
     "\n",
-    "The helper function returns a new dataframe where 'sample' is no longer unqiue. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "6ccbffdf-a97e-4706-bbb7-2da529af966e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from ENA_data_helper import create_ena_data_frame, merge_ena_results_into_sample_data_genre_pf8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "880ec716-942f-4e56-9e73-0375dff0e1ac",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "DataFrame is missing sample ID column, expected name sample (can be changed with param \"sample_id_col_name\")",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/software/isg/languages/Python/Python-3.11.10-jupyter/exec/lib/python3.11/site-packages/pandas/_libs/index.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/software/isg/languages/Python/Python-3.11.10-jupyter/exec/lib/python3.11/site-packages/pandas/_libs/index.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'sample'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/code_dev/validation_malaria/real-world_gold-standard_data/Pf8-GenReMekong/ENA_data_helper.py:103\u001b[0m, in \u001b[0;36mcreate_ena_data_frame\u001b[0;34m(df, sample_id_col_name, chunk_size)\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 103\u001b[0m     sample_ids\u001b[38;5;241m=\u001b[39m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43msample_id_col_name\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/frame.py:4113\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4112\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4113\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n",
-      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/pandas/core/indexes/base.py:3819\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3818\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3819\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3820\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3821\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3822\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3823\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'sample'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m patterns_ena_result_df \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_ena_data_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenre_pf8_merged_seq_gt_concord_patterns_df\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/code_dev/validation_malaria/real-world_gold-standard_data/Pf8-GenReMekong/ENA_data_helper.py:105\u001b[0m, in \u001b[0;36mcreate_ena_data_frame\u001b[0;34m(df, sample_id_col_name, chunk_size)\u001b[0m\n\u001b[1;32m    103\u001b[0m     sample_ids\u001b[38;5;241m=\u001b[39mdf[sample_id_col_name]\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m--> 105\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    106\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDataFrame is missing sample ID column, expected name \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msample_id_col_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m\n\u001b[1;32m    107\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(can be changed with param \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msample_id_col_name\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    109\u001b[0m fields \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample_title\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun_accession\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcenter_name\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlibrary_strategy\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample_accession\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfastq_ftp\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubmitted_ftp\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m    111\u001b[0m \u001b[38;5;66;03m# split the list of sample IDs into chunks of max_chunk_size IDs each in order \u001b[39;00m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;66;03m# to avoid an exception due to URLs becoming too long\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: DataFrame is missing sample ID column, expected name sample (can be changed with param \"sample_id_col_name\")"
-     ]
-    }
-   ],
-   "source": [
-    "patterns_ena_result_df = create_ena_data_frame(genre_pf8_merged_seq_gt_concord_patterns_df)"
+    "The script works with the ENA search results produced earlier, but it needs the FASTQ FTP URLs to be split into two columns.  \n",
+    "In addition, the ENA search results should be filtered by sample ID against the final data saved for each of the three datasets to ensure that data is downloaded only for those samples that are still in the final dataset."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f73365f-cb89-47ef-abbf-a25123b32eb0",
+   "id": "0cc4deee-5e69-43d0-9fcd-3bae91ebf3b9",
    "metadata": {},
    "source": [
-    "Create a new data frame where sample ID is unique again and we add the following columns, each containing the \"run accession\" for the sequencing results of the Pf8 WGS or one of the three AmpSeq panels (GRC1, GRC2, SPEC) of the GenRe project.\n",
-    "- ENA_acc_GenRe_GRC1\n",
-    "- ENA_acc_GenRe_GRC2\n",
-    "- ENA_acc_GenRe_SPEC\n",
-    "- ENA_acc_Pf8\n",
-    "\n",
-    "If a given sample has more than one run accessions for any of the above, an exception is thrown. "
+    "Concordant phenotype data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c591e11-9e56-4f6d-bfee-22dd5cb183da",
+   "execution_count": 93,
+   "id": "a7fb7ecd-08a1-491e-92e5-fad18a9af61d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "genre_pf8_merged_seq_gt_concord_patterns_ena_df = merge_ena_results_into_sample_data_genre_pf8(sample_data=genre_pf8_merged_seq_gt_concord_patterns_df, ena_result=patterns_ena_result_df)"
+    "df = genre_pf8_conc_s_ena_result[\n",
+    "    genre_pf8_conc_s_ena_result['sample'].isin(genre_pf8_conc_s_ena2_df.index)\n",
+    "]\n",
+    "df[['ftp_url_read_1', 'ftp_url_read_2']] = df['fastq_ftp'].str.split(';', expand=True)\n",
+    "df = df[['run_accession','sample','ftp_url_read_1','ftp_url_read_2']]\n",
+    "df.to_csv('ENA_download_manifest_concordant_phenotype_high_quality_samples.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
+   "id": "88538f7d-0f9c-4985-9c17-6fed9e0f7fe8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = genre_pf8_merged_seq_gt_concord_small_ena_result[\n",
+    "    genre_pf8_merged_seq_gt_concord_small_ena_result['sample'].isin(genre_pf8_merged_seq_gt_concord_small_ena2_df.index)\n",
+    "]\n",
+    "df[['ftp_url_read_1', 'ftp_url_read_2']] = df['fastq_ftp'].str.split(';', expand=True)\n",
+    "df = df[['run_accession','sample','ftp_url_read_1','ftp_url_read_2']]\n",
+    "df.to_csv('ENA_download_manifest_fully_concordant_genotype_high_quality_samples.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "id": "19cb2054-5390-45cb-8151-d14c02eebc10",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "genre_pf8_merged_seq_gt_concord_patterns_ena_df"
+    "df = genre_pf8_merged_seq_gt_concord_small_ena_result[\n",
+    "    genre_pf8_merged_seq_gt_concord_small_ena_result['sample'].isin(genre_pf8_merged_seq_gt_concord_patterns_final_df.index)\n",
+    "]\n",
+    "df[['ftp_url_read_1', 'ftp_url_read_2']] = df['fastq_ftp'].str.split(';', expand=True)\n",
+    "df = df[['run_accession','sample','ftp_url_read_1','ftp_url_read_2']]\n",
+    "df.to_csv('ENA_download_manifest_fully_concordant_genotype_patterns_representative_samples.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9c145fa-e1f9-4f3e-b8bf-c67d521922f2",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   }
  ],
