--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -5918,7 +5918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "db0852f5-bd01-421b-a9de-3fee18cb08f9",
    "metadata": {},
    "outputs": [
@@ -5928,6 +5928,7 @@
      "text": [
       "downloaded FASTQ pair 1 of 3628\n",
       "downloaded FASTQ pair 2 of 3628\n",
+      "download attempt 1 of 3 failed for URL ftp://ftp.sra.ebi.ac.uk/vol1/fastq/ERR143/028/ERR14388728/ERR14388728_1.fastq.gz\n",
       "downloaded FASTQ pair 3 of 3628\n",
       "option top3 in use: stopping after three rows processed\n"
      ]
