--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -5913,29 +5913,26 @@
    "metadata": {},
    "source": [
     "### Example: how to use the downloader tool\n",
-    "The following is an example usage of the custom FASTQ downloader provided alongside this notebook.  \n"
+    "The \"ENA_download_manifest*\" files created above can be used by the custom FASTQ downloader provided alongside this notebook. \n",
+    "\n",
+    "The following cell provides an example to show the usage of the tool.  \n",
+    "__To run the command, uncomment line 2__.  \n",
+    "\n",
+    "The command is for demonstration purposes only. It uses a parameter \"--top3\", which stops the download after the rows of data have been processed. This is useful in order to test the download in small scale.  To run the downloader on an entire csv file (any of the \"ENA_download_manifest*\" files created above), remove the \"--top3\" option.  \n",
+    "\n",
+    "While you can run the command in this jupyter notebook, you may wish to run it in a terminal.  \n",
+    "You may also wish to split the \"ENA_download_manifest*\" into chunks and submit download commands in parallel in order to speed up the process. The command, as is, will download a single file at a time and will take a long time to run (depending on your system and network).  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "db0852f5-bd01-421b-a9de-3fee18cb08f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloaded FASTQ pair 1 of 3628\n",
-      "downloaded FASTQ pair 2 of 3628\n",
-      "download attempt 1 of 3 failed for URL ftp://ftp.sra.ebi.ac.uk/vol1/fastq/ERR143/028/ERR14388728/ERR14388728_1.fastq.gz\n",
-      "downloaded FASTQ pair 3 of 3628\n",
-      "option top3 in use: stopping after three rows processed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python3 ENA_data_helper.py download --data ENA_download_manifest_concordant_phenotype_high_quality_samples.csv --out test_fastq_downloader --top3"
+    "# To run this cell and download the data, uncomment the next line\n",
+    "# !python3 ENA_data_helper.py download --data ENA_download_manifest_concordant_phenotype_high_quality_samples.csv --out test_fastq_downloader --top3"
    ]
   }
  ],
