added comments in notebook

--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -5921,7 +5921,14 @@
     "The command is for demonstration purposes only. It uses a parameter \"--top3\", which stops the download after the rows of data have been processed. This is useful in order to test the download in small scale.  To run the downloader on an entire csv file (any of the \"ENA_download_manifest*\" files created above), remove the \"--top3\" option.  \n",
     "\n",
     "While you can run the command in this jupyter notebook, you may wish to run it in a terminal.  \n",
-    "You may also wish to split the \"ENA_download_manifest*\" into chunks and submit download commands in parallel in order to speed up the process. The command, as is, will download a single file at a time and will take a long time to run (depending on your system and network).  \n"
+    "You may also wish to split the \"ENA_download_manifest*\" into chunks and submit download commands in parallel in order to speed up the process. The command, as is, will download a single file at a time and will take a long time to run (depending on your system and network).  \n",
+    "\n",
+    "The command creates a folder (--out) into which the FASTQ file pairs are written. It also creates a manifest file that lists run accessions, remote FTP URLs and local (absolute) file paths to the downloaded FASTQ files.  \n",
+    "\n",
+    "For a full list of options of the tool, run:\n",
+    "```\n",
+    "python3 ENA_data_helper.py download --help\n",
+    "```"
    ]
   },
   {
