added link to publication

--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -549,14 +549,14 @@
    },
    "source": [
     "## Load GenRe Mekong data\n",
-    "Using this file from the GenRe Mekong webstie, release v1.4 14/05/24 (latest release):  \n",
+    "Using this file from the GenRe Mekong website, release v1.4 14/05/24 (latest release):  \n",
     "\n",
     "https://assets.super.so/abd63e6d-92df-4a9f-b19c-3a65d59b8a34/files/4accef63-0436-4893-a00a-6ea0e8a55249/Pf-GenRe-GRCv1.4-Full-PublicRelease-20240514.xlsx  \n",
     "Tab: GRC\n",
     "\n",
     "Sample IDs for samples that were re-analysed in Pf8 are the same in both projects, i.e. it is possible to merge GenRe Mekong and Pf8 data on sample ID.  \n",
     "\n",
-    "For more information on the data in this spreadsheet, consult the [GenRe Mekong data dictionary](https://github.com/GenRe-Mekong/Documents/blob/e331501b8e93752221ebd7ae72e5eddd3e6e924d/Pf-GenRe-GRCv1.4-DataDictionary.xlsx)"
+    "For more information on the data in this spreadsheet, consult the [GenRe Mekong data dictionary](https://github.com/GenRe-Mekong/Documents/blob/e331501b8e93752221ebd7ae72e5eddd3e6e924d/Pf-GenRe-GRCv1.4-DataDictionary.xlsx) and [this publication](https://rdcu.be/eUOoe)."
    ]
   },
   {
