--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -14,7 +14,7 @@
     "2. [GenRE Mekong](https://www.malariagen.net/resource/29/)\n",
     "\n",
     "## Rationale for selection of resources\n",
-    "Pipelines are usually tailored to a particular sequences technology, such as whole-genome or amplicon sequencing. While Pf8 is based on (selective) Whole Genome Sequencing (sWGS) data, GenRE Mekong utilised the SPotMalaria panel for amplicon sequencing (download available at [https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xlsx](https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xlsx).\n",
+    "Pipelines are usually tailored to a particular sequencing  technology, such as whole-genome or amplicon sequencing. While Pf8 is based on (selective) Whole Genome Sequencing (sWGS) data, GenRE Mekong utilised the SPotMalaria panel for amplicon sequencing (download available at [https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xlsx](https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xlsx).\n",
     "Some GenRE Mekong samples have been re-analysed with sWGS for Pf8, thus providing data for the same sample from two different technologies and two independent resistance phenotype calls.\n",
     "We will use the intersect between Pf8 and GenRE Mekong as the gold-standard dataset.\n",
     "\n",
