started read counts notebook for simulated reads

--- a/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
+++ b/real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb
@@ -5910,7 +5910,9 @@
   {
    "cell_type": "markdown",
    "id": "b064c33c-f6e2-4ccf-855f-59f19f4d3ab1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Example: how to use the downloader tool\n",
     "The \"ENA_download_manifest*\" files created above can be used by the custom FASTQ downloader provided alongside this notebook. \n",
