notebook now prepares the bed file

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -5,16 +5,22 @@
    "id": "5e0088e6-1fc9-4e89-bfdc-3490c7385928",
    "metadata": {},
    "source": [
-    "# Prepartion for read count stats for simulated data\n",
+    "# Prepartion for creating simulated data\n",
     "## Aim of this notebook\n",
-    "This notebook prepares read-count stats for a selection of real-world data from the [GenRe Mekong project](https://www.malariagen.net/resource/29/) for the three AmpSeq primer panels used in SpotMalaria (GRC1, GRC2 and SPEC).  \n",
+    "This notebook contains the preparation required to run read simulations using the read simulation pipeline published in this repository.  \n",
+    "The main aim of this notebook is to provide a working recipe for a read simulation run that is based on real-world data. \n",
+    "In the first part, real-world AmpSeq data is used to obtain read counts that inform the simulation. \n",
+    "\n",
+    "\n",
+    "prepares read-count stats for a selection of real-world data from the [GenRe Mekong project](https://www.malariagen.net/resource/29/) for the three AmpSeq primer panels used in SpotMalaria (GRC1, GRC2 and SPEC).  \n",
     "Data for the SpotMalaria panels is available in [this spreadsheet](https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xls).  \n",
     "The read counts are used as guides for the creation of simulated data.  \n",
     "\n",
     "## FASTQ data\n",
     "The FASTQ files used in this notebook are based on the ENA data download manifests created in [this notebook](../real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb). But __note__ that the FASTQ files are __not__ icluded in this repo because of the large amount of data contained in them. If you would like to re-run this notebook, please refer to the explanation provided [here](../real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb#Example:-how-to-use-the-downloader-tool) to download the FASTQ files from ENA using the downloader tool provided in this repo.\n",
     "\n",
-    "For the purpose of this analysis, the dataset [Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv](../real-world_gold-standard_data/Pf8-GenReMekong/Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv), created [here](../real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb#Save-results:-concordant-phenotype-data) was used. This contains an essentially random subset of 907 samples of high-quality data from the GenRe Mekong project. This is sufficient for the purpose of obtaining guides for real-world read counts of the AmpSeq panels.  \n"
+    "For the purpose of this analysis, the dataset [Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv](../real-world_gold-standard_data/Pf8-GenReMekong/Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv), created [here](../real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb#Save-results:-concordant-phenotype-data) was used. This contains a subset of 907 samples of all high-quality data from the GenRe Mekong project where drug resistance phenotype agrees with the WGS sample analysis in Pf8.  \n",
+    "This is sufficient for the purpose of obtaining guides for real-world read counts of the AmpSeq panels.  \n"
    ]
   },
   {
@@ -67,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "5619e6ee-c39b-4cdf-b0cf-b1cfc32b0880",
    "metadata": {
     "tags": []
@@ -82,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "8dc8d3bc-d7ea-4954-a9f2-09f92f564cbb",
    "metadata": {
     "tags": []
@@ -145,33 +151,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3254</th>\n",
-       "      <td>ERR15627188_1.fastq.gz</td>\n",
-       "      <td>14927105</td>\n",
+       "      <th>3623</th>\n",
+       "      <td>ERR15628752_1.fastq.gz</td>\n",
+       "      <td>18788821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3255</th>\n",
-       "      <td>ERR15627189_1.fastq.gz</td>\n",
-       "      <td>12862572</td>\n",
+       "      <th>3624</th>\n",
+       "      <td>ERR15628753_1.fastq.gz</td>\n",
+       "      <td>13952241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3256</th>\n",
-       "      <td>ERR15627190_1.fastq.gz</td>\n",
-       "      <td>11781727</td>\n",
+       "      <th>3625</th>\n",
+       "      <td>ERR15628764_1.fastq.gz</td>\n",
+       "      <td>14159323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3257</th>\n",
-       "      <td>ERR15627191_1.fastq.gz</td>\n",
-       "      <td>12052828</td>\n",
+       "      <th>3626</th>\n",
+       "      <td>ERR15628798_1.fastq.gz</td>\n",
+       "      <td>7910579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3258</th>\n",
-       "      <td>ERR15627192_1.fastq.gz</td>\n",
-       "      <td>9728637</td>\n",
+       "      <th>3627</th>\n",
+       "      <td>ERR15628802_1.fastq.gz</td>\n",
+       "      <td>9683996</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3259 rows × 2 columns</p>\n",
+       "<p>3628 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -182,16 +188,16 @@
        "3     ERR14388606_1.fastq.gz     38189\n",
        "4     ERR14388607_1.fastq.gz     35804\n",
        "...                      ...       ...\n",
-       "3254  ERR15627188_1.fastq.gz  14927105\n",
-       "3255  ERR15627189_1.fastq.gz  12862572\n",
-       "3256  ERR15627190_1.fastq.gz  11781727\n",
-       "3257  ERR15627191_1.fastq.gz  12052828\n",
-       "3258  ERR15627192_1.fastq.gz   9728637\n",
+       "3623  ERR15628752_1.fastq.gz  18788821\n",
+       "3624  ERR15628753_1.fastq.gz  13952241\n",
+       "3625  ERR15628764_1.fastq.gz  14159323\n",
+       "3626  ERR15628798_1.fastq.gz   7910579\n",
+       "3627  ERR15628802_1.fastq.gz   9683996\n",
        "\n",
-       "[3259 rows x 2 columns]"
+       "[3628 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "d6160fab-2fc3-4700-bda3-8bac7c28f01b",
    "metadata": {
     "tags": []
@@ -657,7 +663,7 @@
        "[907 rows x 24 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,12 +678,13 @@
    "id": "2c8d0e88-7d68-4a23-bd31-92ed22f872b7",
    "metadata": {},
    "source": [
-    "Assign FASTQ files back to GenRe AmpSeq primer panel or to Pf8 (WGS), then drop the Pf8 rows, which are not relevant here."
+    "Read counts in ```counts_df``` are assigned to file names that do not contain the name of the primer panel to which the file belongs. Use the ```samples_df``` data to assign the panel name (SPEC, GRC1 or GRC2) to each read count by looking up the file name.  \n",
+    "Drop Pf8 (WGS) data, which is not relevant here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "9c876cc3-0795-40e6-8d9e-f11372cab460",
    "metadata": {
     "tags": []
@@ -703,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "51e781cd-c5c9-4637-a499-36e5651ba811",
    "metadata": {
     "tags": []
@@ -761,7 +768,7 @@
        "2  SPEC    907"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "f0d717a1-8d71-437f-b92a-49f61f00f6cd",
    "metadata": {
     "tags": []
@@ -874,7 +881,7 @@
        "SPEC    1291.057332   0  17924    654.5    988.0   1445.5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,6 +895,326 @@
     "    return x.quantile(0.75)\n",
     "\n",
     "counts_df.groupby('panel').agg({'count': ['mean', 'min','max', q25,q50,q75]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0f5b215-754a-490a-89cf-53a47de1d642",
+   "metadata": {},
+   "source": [
+    "## Configuring the read simulation pipeline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2af2109-7db4-4074-8267-88e08e244347",
+   "metadata": {},
+   "source": [
+    "### Obtain primer data\n",
+    "Primer positions for the GenRe-04b-SpotMalaria AmpSeq panel is available from www.malariagen.net in form of an Excel file. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "19cf1db4-fe4b-44a4-99c1-4400d2d47f2a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df = pd.read_excel(\n",
+    "    \"https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xlsx\",\n",
+    "    sheet_name=\"P. falciparum amplicon primers\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09944b0f-fc25-4ebc-a24a-4da09dc2c206",
+   "metadata": {},
+   "source": [
+    "Change column names in line with expected headers for bed-like config file for the simulation pipeline.  \n",
+    "Add a column DESC, expected by the simulation pipeline. Use it to record the primer panel ('GRC1','GRC2' or 'SPEC') and drop rows (if any) that do not have a primer panel assigned.  \n",
+    "Only keep the columns relevant to the simulation pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "19353f64-97d0-480a-8ebb-9f1327488aa2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df.rename(\n",
+    "    columns={\n",
+    "        'Chromosome':'#CHROM', \n",
+    "        'Amplicon Start Position':'START',\n",
+    "        'Amplicon Stop Position':'END'\n",
+    "    },inplace=True)\n",
+    "\n",
+    "panel_df['DESC'] = panel_df.apply(\n",
+    "    lambda row:\n",
+    "    'SPEC' if 'SPEC' in row['Multiplex'] else \n",
+    "    'GRC1' if 'GRC1' in row['Multiplex'] else \n",
+    "    'GRC2' if 'GRC2' in row['Multiplex'] else\n",
+    "    np.NaN, \n",
+    "    axis=1\n",
+    ")\n",
+    "panel_df=panel_df[panel_df['DESC'].notna()]\n",
+    "keep_cols=['#CHROM','START','END','DESC']\n",
+    "panel_df=panel_df[keep_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b5e61af-2b1c-41cb-a060-4d6cfe38bc03",
+   "metadata": {},
+   "source": [
+    "Coordinates are 1-based in this file but need to be converted to 0-based for the simulation pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "7d27fe78-082c-4f89-928a-358206b71e51",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df['START']=pd.to_numeric(panel_df['START'],errors='coerce')-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "4b784ca2-82b6-4f23-9a42-8abb263b63bc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df['END']=pd.to_numeric(panel_df['END'],errors='coerce')-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b8dae3-645a-4da4-b342-9ddecfa152aa",
+   "metadata": {},
+   "source": [
+    "Keep only rows where primer start and end is provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "76312dd6-8979-42e4-af23-78ea17ea3aaf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df = panel_df[(panel_df['START'].notna()) & (panel_df['END'].notna())]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b344a8-0302-4800-a57c-3c542df14f8d",
+   "metadata": {},
+   "source": [
+    "convert positions to integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "eb2d703e-f356-4e53-bf86-207b09c497de",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df['START']=panel_df['START'].astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "7d44be3a-997c-4966-946f-70cccb6b4ac4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df['END']=panel_df['END'].astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "41dff90d-2c24-4064-a629-b13eb30a037c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#CHROM</th>\n",
+       "      <th>START</th>\n",
+       "      <th>END</th>\n",
+       "      <th>DESC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pf_M76611</td>\n",
+       "      <td>88</td>\n",
+       "      <td>314</td>\n",
+       "      <td>SPEC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pf_M76611</td>\n",
+       "      <td>1637</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>SPEC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>145386</td>\n",
+       "      <td>145590</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>179274</td>\n",
+       "      <td>179471</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>180439</td>\n",
+       "      <td>180683</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2480904</td>\n",
+       "      <td>2481116</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2625793</td>\n",
+       "      <td>2626011</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2733564</td>\n",
+       "      <td>2733803</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>3045934</td>\n",
+       "      <td>3046141</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>3126025</td>\n",
+       "      <td>3126256</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>136 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          #CHROM    START      END  DESC\n",
+       "0      Pf_M76611       88      314  SPEC\n",
+       "1      Pf_M76611     1637     1892  SPEC\n",
+       "2    Pf3D7_01_v3   145386   145590  GRC1\n",
+       "3    Pf3D7_01_v3   179274   179471  GRC2\n",
+       "4    Pf3D7_01_v3   180439   180683  GRC1\n",
+       "..           ...      ...      ...   ...\n",
+       "132  Pf3D7_14_v3  2480904  2481116  GRC1\n",
+       "133  Pf3D7_14_v3  2625793  2626011  GRC2\n",
+       "134  Pf3D7_14_v3  2733564  2733803  GRC1\n",
+       "135  Pf3D7_14_v3  3045934  3046141  GRC2\n",
+       "136  Pf3D7_14_v3  3126025  3126256  GRC1\n",
+       "\n",
+       "[136 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "panel_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9d584a-73d9-4442-92bd-0e41f96fcefc",
+   "metadata": {},
+   "source": [
+    "Save as file '20200705-GenRe-04b-SpotMalaria-SupplementaryFile1_Pf_amplicon_primers.bed'.  \n",
+    "This will be used as the input bed-like file for the read simulation pipeline, configuring the amplicons that will be simulated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "692521b7-b326-4c09-abd4-d93d1e8b726a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "panel_df.to_csv('20200705-GenRe-04b-SpotMalaria-SupplementaryFile1_Pf_amplicon_primers.bed', index=False)"
    ]
   }
  ],
